--- a/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.html
+++ b/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.html
@@ -1,38 +1,38 @@
-<link rel="stylesheet" href="employee-edit.component.css">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">LOGO-A04-PROJECT</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<!--<link rel="stylesheet" href="employee-edit.component.css">-->
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+<!--  <a class="navbar-brand" href="#">LOGO-A04-PROJECT</a>-->
+<!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--    <span class="navbar-toggler-icon"></span>-->
+<!--  </button>-->
 
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto ml-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link text-uppercase" href="#">Trang chủ <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link text-uppercase" href="#">Tin tức</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link text-uppercase" href="#">Về chúng tôi</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link text-uppercase" href="#">Liên Hệ</a>
-      </li>
-    </ul>
-    <div class="dropleft">
-      <button type="button" class="btn btn-nav dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Putin <i class="fa-solid fa-circle-user"></i></button>
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-gears"></i> Quản lý hệ thống </a>
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-circle-info"></i> Quản lý thông tin đàn</a>
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>
-        <a class="dropdown-item" href="#"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
-      </div>
-    </div>
-  </div>
-</nav>
+<!--  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">-->
+<!--    <ul class="navbar-nav mr-auto ml-auto mt-2 mt-lg-0">-->
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link text-uppercase" href="#">Trang chủ <span class="sr-only">(current)</span></a>-->
+<!--      </li>-->
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link text-uppercase" href="#">Tin tức</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link text-uppercase" href="#">Về chúng tôi</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item active">-->
+<!--        <a class="nav-link text-uppercase" href="#">Liên Hệ</a>-->
+<!--      </li>-->
+<!--    </ul>-->
+<!--    <div class="dropleft">-->
+<!--      <button type="button" class="btn btn-nav dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Putin <i class="fa-solid fa-circle-user"></i></button>-->
+<!--      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-gears"></i> Quản lý hệ thống </a>-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-circle-info"></i> Quản lý thông tin đàn</a>-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-carrot"></i> Quản lý thức ăn</a>-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-book-medical"></i> Quản lý bệnh lý</a>-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-truck-moving"></i> Quản lý xuất chuồng</a>-->
+<!--        <a class="dropdown-item" href="#"> <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</nav>-->
 <div class="container-fluid" id="content">
   <div class="row">
     <div class="col-lg-3 ml-0">
@@ -45,15 +45,16 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
           <li class="nav-item">
-            <a href="#" class="nav-link active" aria-current="page">
+            <a [routerLink]="['/admin/employee']" class="nav-link active" aria-current="page">
               <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
               Quản lý nhân viên
             </a>
           </li>
+
           <li>
-            <a href="#" class="nav-link link-dark">
+            <a [routerLink]="['/employee/entities']"class="nav-link link-dark">
               <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
-              Quản lý thông báo
+              Quản lý cá thể
             </a>
           </li>
 
@@ -94,35 +95,35 @@
             </div>
           </div>
 
-<!--          <div class="form-group row" >-->
-<!--            <label  class="col-form-label ml-3" style="width: 150px;">Tên tài khoản<span class="text-danger">*</span></label>-->
-<!--            <div class="col-sm-8">-->
-<!--              <div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">-->
-<!--                <input disable class="span2 form-control" size="16" type="text" formControlName="accountName">-->
-<!--                <span style="color: red;"></span>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
+          <!--          <div class="form-group row" >-->
+          <!--            <label  class="col-form-label ml-3" style="width: 150px;">Tên tài khoản<span class="text-danger">*</span></label>-->
+          <!--            <div class="col-sm-8">-->
+          <!--              <div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">-->
+          <!--                <input disable class="span2 form-control" size="16" type="text" formControlName="accountName">-->
+          <!--                <span style="color: red;"></span>-->
+          <!--              </div>-->
+          <!--            </div>-->
+          <!--          </div>-->
 
-<!--          <div class="form-group row" >-->
-<!--            <label  class="col-form-label ml-3" style="width: 150px;">Mật khẩu<span class="text-danger">*</span></label>-->
-<!--            <div class="col-sm-8">-->
-<!--              <div class="input-append date" id="dp4" data-date="12-02-2012" data-date-format="dd-mm-yyyy">-->
-<!--                <input class="span2 form-control" size="16" type="password" formControlName="accountPassword">-->
-<!--                <span style="color: red;"></span>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
+          <!--          <div class="form-group row" >-->
+          <!--            <label  class="col-form-label ml-3" style="width: 150px;">Mật khẩu<span class="text-danger">*</span></label>-->
+          <!--            <div class="col-sm-8">-->
+          <!--              <div class="input-append date" id="dp4" data-date="12-02-2012" data-date-format="dd-mm-yyyy">-->
+          <!--                <input class="span2 form-control" size="16" type="password" formControlName="accountPassword">-->
+          <!--                <span style="color: red;"></span>-->
+          <!--              </div>-->
+          <!--            </div>-->
+          <!--          </div>-->
 
-<!--          <div class="form-group row" >-->
-<!--            <label  class="col-form-label ml-3" style="width: 150px;">Xác nhận mật khẩu<span class="text-danger">*</span></label>-->
-<!--            <div class="col-sm-8">-->
-<!--              <div class="input-append date" id="dp5" data-date="12-02-2012" data-date-format="dd-mm-yyyy">-->
-<!--                <input class="span2 form-control" size="16" type="password" formControlName="accountPassword">-->
-<!--                <span style="color: red;"></span>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
+          <!--          <div class="form-group row" >-->
+          <!--            <label  class="col-form-label ml-3" style="width: 150px;">Xác nhận mật khẩu<span class="text-danger">*</span></label>-->
+          <!--            <div class="col-sm-8">-->
+          <!--              <div class="input-append date" id="dp5" data-date="12-02-2012" data-date-format="dd-mm-yyyy">-->
+          <!--                <input class="span2 form-control" size="16" type="password" formControlName="accountPassword">-->
+          <!--                <span style="color: red;"></span>-->
+          <!--              </div>-->
+          <!--            </div>-->
+          <!--          </div>-->
 
           <div class="form-group row" >
             <label  class="col-form-label ml-3" style="width: 150px;">Email<span class="text-danger">*</span></label>
@@ -154,10 +155,10 @@
           <div class="form-group row">
             <label  class="col-form-label ml-3" style="width: 150px;">Giới tính<span class="text-danger">*</span></label>
             <div class="col-sm-7">
-<!--              <div class="form-check form-check-inline">-->
-<!--                <input class="form-check-input" type="radio" formControlName="gender" id="inlineRadio2" value="Nữ">-->
-<!--                <label class="form-check-label" for="inlineRadio2">Nữ</label>-->
-<!--              </div>-->
+              <!--              <div class="form-check form-check-inline">-->
+              <!--                <input class="form-check-input" type="radio" formControlName="gender" id="inlineRadio2" value="Nữ">-->
+              <!--                <label class="form-check-label" for="inlineRadio2">Nữ</label>-->
+              <!--              </div>-->
 
               <div class="form-check form-check-inline" *ngFor="let gender of genderList">
                 <input class="form-check-input" id="gender-{{gender.id}}" type="radio" selected value="{{gender.value}}" name="{{gender.name}}"
@@ -196,7 +197,7 @@
 
           <div class="text-center">
             <button type="submit" class="btn btn-warning m-2">Cập nhật</button>
-            <button type="button" class="btn btn-success m-2" [routerLink]="['/employee']">Huỷ bỏ</button>
+            <button type="button" class="btn btn-success m-2" [routerLink]="['/admin/employee']">Huỷ bỏ</button>
           </div>
 
         </div>
