fix front end create

--- a/angular/angular-template/src/app/entities/entities-create/entities-create.component.html
+++ b/angular/angular-template/src/app/entities/entities-create/entities-create.component.html
@@ -80,10 +80,10 @@
         <!-- Sidebar -->
       </div>
     </div>
-    <div class="col-lg-10 " style="">
-      <strong style="font-size: larger;margin-top: 10px; height: 20px">Khởi tạo thông tin vật nuôi</strong>
+    <div class="col-lg-10 " style="padding-left: 30px;padding-top: 20px">
+      <strong style="font-size: 18px; height: 20px; padding-left: 20px">Khởi tạo thông tin vật nuôi</strong>
       <hr/>
-      <form style="max-width: 100%; text-align: center; margin-left: 2em;margin-top: 2em " [formGroup]="entitiesForm" *ngIf="entitiesForm" (loadeddata)="getEntitiesId()" (ngSubmit)="createEntities()" class="bg-form">
+      <form style="max-width: 100%; text-align: center;justify-items: center;align-items: center; margin-left: 2em" [formGroup]="entitiesForm" *ngIf="entitiesForm" (loadeddata)="getEntitiesId()" (ngSubmit)="createEntities()" class="bg-form">
         <div class="container-fluid">
 
           <div class="form-group row">
