--- a/angular/angular-template/src/app/entities/entities-create/entities-create.component.css
+++ b/angular/angular-template/src/app/entities/entities-create/entities-create.component.css
@@ -1867,10 +1867,8 @@ pre code {
 }
 
 .form-control {
-  display: block;
   width: 100%;
   height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem 0.75rem;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -1884,6 +1882,7 @@ pre code {
 
 @media (prefers-reduced-motion: reduce) {
   .form-control {
+
     margin-left: 10px;
     transition: none;
   }
@@ -1953,12 +1952,11 @@ select.form-control:focus::-ms-value {
 
 .form-control-file,
 .form-control-range {
-  display: block;
   width: 100%;
 }
 
 .col-form-label {
-  margin-left: 10em;
+  text-align: left;
   padding-top: calc(0.375rem + 1px);
   padding-bottom: calc(0.375rem + 1px);
   margin-bottom: 0;
