--- a/angular/angular-template/src/app/component/header/header.component.html
+++ b/angular/angular-template/src/app/component/header/header.component.html
@@ -40,32 +40,8 @@
           <a ngbDropdownItem class="dropdown-item item-function-1" >
             <i class="fa-solid fa-gears"></i> Entities
           </a>
-          <a ngbDropdownItem class="dropdown-item item-function-6" href="#" data-toggle="modal" data-target="#exampleModal">
+          <a ngbDropdownItem class="dropdown-item item-function-1" >
             <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</a>
-        </div>
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">
-                  Hãy xác nhận!
-                </h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">Bạn có muốn đăng xuất không?</div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                  Không
-                </button>
-                <button type="button" class="btn btn-confirm-logout">
-                  Có
-                </button>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
