--- a/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.css
+++ b/angular/angular-template/src/app/employee/employee-edit/employee-edit.component.css
@@ -12,6 +12,9 @@
   font-weight: bolder;
 }
 
+form-check form-check-inline {
+  padding-top: 20px !important;
+}
 form {
   vertical-align: middle;
 }
