--- a/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
+++ b/angular/angular-template/src/app/employee/employee-list/employee-list.component.html
@@ -154,34 +154,13 @@
             <div class="col-sm-12 col-md-7">
               <div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate">
 
-                <ul class="nav nav-pills">
-                  <li class="nav-link">Trang</li>
-                  <li class="nav-item" *ngFor="let p of pages;let i=index">
-                    <a class="nav-link " selected href="" (click)="setPage(i,$event)">{{i+1}}</a>
-                  </li>
-<!--                  <a class="nav-link " href="" (click)="setPage(,$event)">Sau</a>-->
-                </ul>
+                  <ul *ngIf="pages && pages.length" class="nav nav-pills">
+                    <li class="nav-link">Trang</li>
+                    <li class="nav-item" *ngFor="let p of pages;let i=index">
+                      <a class="nav-link" href="" (click)="setPage(i,$event)" [ngClass]="{active:currentPage === p}">{{i+1}}</a>
+                    </li>
+                  </ul>
 
-
-<!--                <ul class="pagination"><li class="paginate_button page-item previous" id="dataTable_previous">-->
-<!--                  <a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Trước</a>-->
-<!--                </li>-->
-<!--                  <li class="paginate_button page-item ">-->
-<!--                    <a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a>-->
-<!--                  </li>-->
-<!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a>-->
-<!--                  </li>-->
-<!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a>-->
-<!--                  </li>-->
-<!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a>-->
-<!--                  </li>-->
-<!--                  <li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a>-->
-<!--                  </li>-->
-<!--                  <li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next">-->
-
-<!--                    <a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Sau</a>-->
-<!--                  </li>-->
-<!--                </ul>-->
               </div>
             </div>
           </div>
